kong-demo-apps/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: kong-demo-apps
  labels:
    app: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
