kong-demo-apps/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: kong-demo-apps
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: rate-limit-5pm
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service: 
            name: echo
            port:
              number: 80
